Update book on pages with h2 header tags.

--- a/manuscript/page-9/body.html
+++ b/manuscript/page-9/body.html
@@ -1,1 +1,1 @@
-<div class="leaf flex"><div class="inner justify"><h2>Part I. The Wild Land</h2><hr class="section"></div> </div>
+<div class="leaf flex"><div class="justify"><h2>Part I. The Wild Land</h2><hr class="section"></div> </div>
