--- a/manuscript/page-94/body.html
+++ b/manuscript/page-94/body.html
@@ -1,1 +1,1 @@
-<div class="leaf flex"><div class="inner justify"><h2>Part II. Neighboring Fields</h2><hr class="section"></div> </div>
+<div class="leaf flex"><div class="justify"><h2>Part II. Neighboring Fields</h2><hr class="section"></div> </div>
